# hledger-import

./: CONFIGURATION.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml  testrunner.yml
src/: config.rs  deduplication.rs  error.rs  hasher.rs  hledger.rs  main.rs  pdftotext.rs
src/hledger/: deduplication.rs  format.rs  mod.rs  output.rs  query.rs
src/importers/: cardcomplete.rs  erste.rs  flatex_csv.rs  flatex_inv.rs  mod.rs  paypal.rs  revolut.rs
