[package]
name = "hledger-import"
version = "0.5.2"
edition = "2024"

[features]
cardcomplete = ["fast-xml"]
erste = []
flatex = ["csv", "lopdf"]
revolut = ["csv"]
paypal = ["csv"]
default = ["cardcomplete", "erste", "flatex", "revolut","paypal"]

[dependencies]
bigdecimal = { version = "0.4.4", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde", "now"] }
clap = { version = "4.5.34", features = ["derive"] }
csv = { version = "1.3.0", optional = true }
fast-xml = { version = "0.23.1", features = ["serialize"], optional = true }
homedir = "0.3.4"
lopdf = { version = "0.36.0", optional = true }
regex = "1.10.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = "2.0.12"
toml = "0.8.14"
