[package]
name = "hledger-import"
version = "0.7.1-SNAPSHOT"
edition = "2024"

[features]
cardcomplete = ["fast-xml"]
erste = []
flatex = ["csv", "tempfile"]
revolut = ["csv"]
paypal = ["csv"]
default = ["cardcomplete", "erste", "flatex", "revolut","paypal"]

[dependencies]
bigdecimal = { version = "0.4.4", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde", "now"] }
clap = { version = "4.5.43", features = ["derive"] }
csv = { version = "1.3.0", optional = true }
fast-xml = { version = "0.23.1", features = ["serialize"], optional = true }
homedir = "0.3.6"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
thiserror = "2.0.16"
toml = "0.9.4"
tempfile = { version = "3.21.0", optional = true }
